fixed small warnings