@@ -24,14 +24,12 @@ public final class OrderService {
     public void removeLastItem() {
         var items = new java.util.ArrayList<>(order.items());
         if (!items.isEmpty()) {
-            var last = items.get(items.size() - 1);
-            items.remove(items.size() - 1);
-            // replace items
+            items.removeLast();
             try {
                 var field = Order.class.getDeclaredField("items");
                 field.setAccessible(true);
                 field.set(order, items);
-            } catch (Exception e) {
+            } catch (NoSuchFieldException | IllegalAccessException e) {
                 throw new IllegalStateException("Could not remove item reflectively; adapt your Order API.");
             }
             System.out.println("[Service] Removed last item");
